clusters/production/apps/discourse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discourse
  namespace: prod
  labels:
    app: discourse
spec:
  type: ClusterIP
  selector:
    app: discourse
    component: web
  ports:
    - { name: http, port: 80, targetPort: 3000, protocol: TCP }
